--- a/04 - Final project/bibliography.bib
+++ b/04 - Final project/bibliography.bib
@@ -112,3 +112,13 @@ volume = {7},
 year = {2003}
 }
 
+
+@book{Dorigo2004,
+author = {Dorigo, Marco and St{\"{u}}tzle, Thomas},
+file = {:C$\backslash$:/Users/Gustavo/SkyDrive/Academic/Library/Dorigo, St{\"{u}}tzle/Dorigo, St{\"{u}}tzle - 2004 - Ant Colony Optimization.pdf:pdf},
+isbn = {0262042193},
+mendeley-groups = {Tasks/PFC/Optimization,Tasks/SBAI 2017},
+title = {{Ant Colony Optimization}},
+year = {2004}
+}
+
