--- a/04 - Final project/report04.Rmd
+++ b/04 - Final project/report04.Rmd
@@ -45,7 +45,7 @@ library(lmtest)
 
 # Sumário
 
-Ferramentas online para planejamento de viagens normalmente permitem que usuários busquem passagens, hotéis e construam determinado itinerário, mas não oferecem suporte para viagens com flexibilidade nas datas ou na ordenação de destinos. Um algoritmo, alternativo ao clássico, foi proposto para solucionar o problema, e que promete buscar melhores combinações de passagens e hotéis para uma viagem, minimizando o custo e tempo de transporte. Pretende-se realizar um experimento que detecte diferenças significativas entres os dois algoritmos, de forma a determinar em quais aspectos o alternativo pode ser melhor (ou não) ao clássico. Resultados prelimiares parecem indicar que o algoritmo proposto é ligeiramente superior em qualidade relativa, mas são afetados da mesma forma por variações no tamanho da instância considerada, além de apresentarem certo efeito de iteração em relação entre os algoritmos, o tamanho do problema e o tenmpo de convergência
+Ferramentas online para planejamento de viagens normalmente permitem que usuários busquem passagens, hotéis e construam determinado itinerário, mas não oferecem suporte para viagens com flexibilidade nas datas ou na ordenação de destinos. Um algoritmo, alternativo ao clássico, foi proposto para solucionar o problema, e que promete buscar melhores combinações de passagens e hotéis para uma viagem, minimizando o custo e tempo de transporte. Pretende-se realizar um experimento que detecte diferenças significativas entres os dois algoritmos, de forma a determinar em quais aspectos o alternativo pode ser melhor (ou não) ao clássico. Resultados prelimiares parecem indicar que o algoritmo proposto é ligeiramente superior em qualidade relativa, mas são afetados da mesma forma por variações no tamanho da instância considerada, além de apresentarem certo efeito de iteração em relação entre os algoritmos, o tamanho do problema e o tempo de convergência
 
 # 1. Descrição do Problema
 
